<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">get2gether</string>
    <string name="fb_appid">134601229976419</string>
    <string name="hello">Welcome. Press Menu to login into Facebook...</string>
    <string name="calc_route">Calculate route</string>
	<string name="route_info">View route info</string>
	
	<string name="newHello">MapOverlayDemo</string>
	<string name="goLabel">Show the Map</string>
	<string name="set_locations">Set locations</string>
	<string name="arrange">Arrange a meet-up</string>
	<string name="entername">Name:</string>
	<string name="enterlocation">Location:</string>
	<string name="enterdate">Date:</string>
	<string name="entertime">Time:</string>
	<string name="arrange_button_tag">Arrange I say</string>
	<string name="search_location_button_tag">Search Location</string>
	<string name="dismiss_tag">Dismiss</string>
	<string name="select_address_header">Select Address</string>
	<string name="widget_text">Hello Widget!</string>
	<string name="address">(Search for address)</string>
	
	<string name="fb_login">You need to log in to Facebook!</string>
	<string name="event_desc">get2gether Event</string>
	<string name="select_friends_button_tag">Select</string>
	
	<string name="fb_login">You need to log in to Facebook!</string>
	<string name="event_desc">get2gether Event</string>
	<string name="select_friends_button_tag">Select</string>
	
	<string name="selectdate">Select date</string>
	<string name="selecttime">Select time</string>
	<string name="enterdescription">Event Details</string>
	
	<string name="dateSliderTitle">Selected date</string>
	
	<string name="newHello">MapOverlayDemo</string>
	<string name="goLabel">Show the Map</string>
	<string name="set_locations">Set locations</string>
	<string name="arrange">Arrange a</string>
	<string name="meetup">new meetup</string>
	<string name="entername">Event name</string>
	<string name="enterlocation">Event Location</string>
	<string name="enterdate">Date</string>
	<string name="entertime">Time</string>
	<string name="arrange_button_tag">Arrange a new meet up</string>
	<string name="search_location_button_tag">Search Location</string>
	<string name="dismiss_tag">Dismiss</string>
	<string name="select_address_header">Select Address</string>
	<string name="widget_text">Hello Widget!</string>
	<string name="address">Search for address</string>
	
	<string name="logout">Logout of Facebook</string>
	
</resources>
