<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_event_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/arrange"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/arrange"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/enter_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/entername"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/meetup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/enter_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/enterlocation"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/meetup_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/search_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_location_button_tag" />

            <TextView
                android:id="@+id/enter_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/enterdate"
                android:textSize="20dp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/enter_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/entertime"
                android:textSize="20dp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <Button
                android:id="@+id/arrange_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrange_button_tag" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>